# merge_pdfs

./: README.md  pyproject.toml
merge_pdfs/: merge.py
src/: merge.py
